--- a/manifest.json
+++ b/manifest.json
@@ -6,16 +6,9 @@
   "background_color": "#667eea",
   "theme_color": "#764ba2",
   "orientation": "portrait",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "scope": "/",
+  "description": "Juego educativo para niños: encuentra los pares de banderas de Sudamérica.",
+  "lang": "es",
+  "categories": ["education", "games"],
+  "icons": []
 }
