--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
-  "name": "Memoria Banderas Sudamérica",
-  "short_name": "Memoria SA",
+  "name": "Juego de Memoria",
+  "short_name": "Banderas de Suramérica",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#667eea",
-  "theme_color": "#764ba2",
+  "background_color": "#3e4a82",
+  "theme_color": "#3b77c2",
   "orientation": "portrait",
   "scope": "/",
   "description": "Juego educativo para niños: encuentra los pares de banderas de Sudamérica.",
   "lang": "es",
-  "categories": ["education", "games"],
-  "icons": []
+  "categories": [
+    "education",
+    "games"
+  ]
 }
